# polynomial-functor

./: CHANGELOG.md  LICENSE  README.md  cabal.project  polynomial-functor.cabal
finite-polynomial/: CHANGELOG.md  README.md  finite-polynomial.cabal
finite-polynomial/doc/: aligney.html  gentab.hs
finite-polynomial/example/: Main.hs
finite-polynomial/src/Data/: Polynomial.hs  Singleton.hs
finite-polynomial/src/Data/Polynomial/: Functor.hs
finite-polynomial/src/Data/Polynomial/Functor/: Deriving.hs
finite-polynomial/test/: Enum1.hs  Main.hs  Property.hs  SemigroupDo.hs  SemiringProp.hs
polynomial-comonad/: README.md  cabal.project  polynomial-comonad.cabal
polynomial-comonad/src/: BabySingleton.hs  Flow.hs  PolyComonad.hs
polynomial-comonad/src/Control/Category/: Dual.hs  Indiscrete.hs  NatOrd.hs  OneObject.hs
polynomial-comonad/src/Control/Comonad/: Action.hs  Travel.hs
polynomial-comonad/src/Control/Comonad/Travel/: Boolean.hs  Env.hs  NonEmpty.hs  Store.hs  Traced.hs
polynomial-comonad/src/Control/Monad/: Flow.hs
polynomial-comonad/src/Data/: InternalCategory.hs  InternalQuiver.hs
polynomial-comonad/src/Data/InternalCategory/: Clique.hs  Codiscrete.hs  Discrete.hs  Indiscrete.hs  Morphism.hs  PolyComonad.hs
polynomial-comonad/src/Data/InternalQuiver/: Morphism.hs  Path.hs
polynomial-comonad/src/GHC/TypeNats/: Singletons.hs
polynomial-comonad/src/PolyComonad/: Boolean.hs  Env.hs  NonEmpty.hs  Store.hs  Traced.hs
polynomial-functor/: README.md  cabal.project  polynomial-functor.cabal
polynomial-functor/src/Data/Finite/: Extra.hs
polynomial-functor/src/Data/Functor/: Polynomial.hs  Pow.hs
polynomial-functor/src/Data/Functor/Polynomial/: Class.hs  Tag.hs
polynomial-functor/src/Data/GADT/: HasFinitary.hs  HasSNat.hs
polynomial-functor/src/Data/GADT/Compare/: Extra.hs
polynomial-functor/test/: Main.hs
singletons-minibase/: CHANGELOG.md  LICENSE  singletons-minibase.cabal
singletons-minibase/src/Data/Bool/: Singletons.hs
singletons-minibase/src/Data/Finite/: Extra.hs  Singletons.hs
singletons-minibase/src/Data/Unit/: Singletons.hs
singletons-minibase/src/GHC/TypeNats/: Extra.hs  Singletons.hs
singletons-minibase/test/: Main.hs
src/: PolyComonad.hs
src/Control/Category/: NatOrd.hs
src/Data/: Additive.hs  Poly2.hs
src/Data/Finite/: Extra.hs
src/Data/Functor/: Polynomial.hs
src/Data/Functor/Polynomial/: Class.hs  Tag.hs
src/PolyComonad/: NonEmpty.hs
test/: Main.hs
