cabal-version:      3.0
name:               polynomial-functor
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Polynomial functors

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            BSD-3-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Koji Miyazato

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         viercc@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Functor.Polynomial
    other-modules:    Data.Finite.Extra
    build-depends:    base ^>=4.17.0.0
                    , finite-typelits
                    , typelits-witnesses
                    , finitary
                    , ghc-typelits-natnormalise
                    , vector-sized
                    , some
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite polynomial-functor-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    build-depends:
        base ^>=4.17.0.0,
        finitary,
        polynomial-functor
