cabal-version:      3.0
name:               finite-polynomial
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
category:           Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:
      Data.Polynomial,
      Data.Polynomial.Functor,
      Data.Polynomial.Functor.Deriving
    
    build-depends:
      base >=4.18.1.0 && < 5,
      singletons >= 3.0.2

    hs-source-dirs:   src

    default-language: Haskell2010

executable finite-polynomial-example
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   example
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        finite-polynomial

test-suite finite-polynomial-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
      Enum1,
      Property,
      SemiringProp,
      SemigroupDo
    build-depends:
        base ^>=4.18.1.0,
        singletons,
        finite-polynomial
