cabal-version:      3.0
name:               polynomial-comonad
version:            0.1.0.0
synopsis:           Polynomial comonads
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  PolyComonad, BabySingleton
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0, comonad
    hs-source-dirs:   src
    default-language: GHC2021

test-suite polynomial-comonad-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        polynomial-comonad
